# VLA-Based-7-DOF-ROBOT

./: README.md
franka_bringup/: CMakeLists.txt  package.xml
franka_bringup/launch/: pick_and_place.launch.py
franka_controller/: CMakeLists.txt  package.xml
franka_controller/launch/: controller.launch.py  slider_controller.launch.py
franka_description/: CMakeLists.txt  package.xml
franka_description/launch/: display.launch.py  gazebo.launch.py
franka_description/urdf/: arm.xacro  gazebo.xacro  panda.urdf.xacro  ros2control.xacro  sensors.xacro
franka_description/worlds/: demo.world
franka_interfaces/: CMakeLists.txt  package.xml
franka_interfaces/srv/: TaskCommand.srv
franka_moveit/: CMakeLists.txt  package.xml
franka_moveit/launch/: moveit.launch.py
franka_vision/: package.xml  setup.py
llm_planner/: package.xml  setup.py
llm_planner/config/: planner_params.yaml
llm_planner/llm_planner/: task_planner_node.py
pymoveit2/: package.xml
pymoveit2/examples/: pick_and_place.py
voice_controller/: package.xml  setup.py
voice_controller/voice_controller/: voice_node.py
