<?xml version="1.0"?>
<package format="3">
  <name>franka_interfaces</name>
  <version>0.0.1</version>
  <description>Custom interfaces for VLA system</description>

  <maintainer email="you@email.com">robotics_dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>